Source/WebCore/platform/network/cf/ResourceRequest.h
@@ -117,8 +117,11 @@ namespace WebCore {
 #endif
 
 #if PLATFORM(IOS)
-        void setMainResourceRequest(bool isMainResourceRequest) const { m_mainResourceRequest = isMainResourceRequest; }
-        bool isMainResourceRequest() const { return m_mainResourceRequest; }
+        // FIXME: deprecatedIsMainResourceRequest() does not return the correct value if the ResourceRequest has been
+        // deserialized from an IPC message. As a result this function can only be relied on when networking is not in a
+        // separate process.
+        void deprecatedSetMainResourceRequest(bool isMainResourceRequest) const { m_mainResourceRequest = isMainResourceRequest; }
+        bool deprecatedIsMainResourceRequest() const { return m_mainResourceRequest; }
 
     private:
         mutable bool m_mainResourceRequest = false;
